add top navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>GoCo Careers Page</title>
   </head>
   <body>
+    <nav class="navbar">
+      <div class="brand-logo">
+        <img src="./assets/goco-group-logo.png" alt="company-logo" />
+      </div>
+      <a href="#" class="hamburger-menu">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#">Who we are</a></li>
+          <li><a href="#">#LifeatGoCo</a></li>
+          <li><a href="#">What's in it for you</a></li>
+          <li><a href="#">GoFurther Academy</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end-button"><button>View Jobs</button></div>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
