--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>GoCo Careers Page</title>
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar">
       <div class="brand-logo">
         <img src="./assets/goco-group-logo.png" alt="company-logo" />
@@ -28,6 +29,17 @@
       </div>
       <div class="navbar-end-button"><button>View Jobs</button></div>
     </nav>
+    <!-- Hero -->
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Find your next job with GoCo</h1>
+        <button class="button-with-arrow"> 
+          <span>Go for it</span>
+          <span>></span>
+        </button>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
