--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,46 @@
     <div class="hero-image">
       <div class="hero-text">
         <h1>Find your next job with GoCo</h1>
-        <button class="button-with-arrow"> 
+        <button class="button-with-arrow">
           <span>Go for it</span>
           <span>></span>
         </button>
+      </div>
+    </div>
+    <!-- Grid -->
+    <div class="grid">
+      <div class="grid-text">
+        <h1>Join us as we save time and money for people everywhere</h1>
+        <p>sdfsdfdsfdfsdfsd</p>
+        <button class="button-with-arrow">
+          <span>Who we are</span> <span>></span>
+        </button>
+      </div>
+      <div class="grid-image">
+        <img
+          src="./assets/picturesOfCompanies.png"
+          alt="Pictures of company logos"
+        />
+      </div>
+      <div class="grid-image">
+        <img src="./assets/excitedPeople.jpeg" alt="People looking excited" />
+      </div>
+      <div class="grid-text">
+        <h1>Collaborate, innovate and be proud</h1>
+        <p>whsdfdsffsd</p>
+        <button class="button-with-arrow">
+          <span>#LifeatGoCo</span> <span>></span>
+        </button>
+      </div>
+      <div class="grid-text">
+        <h1>Grow your GoCo career</h1>
+        <p>sdfsdfdsfdsf</p>
+        <button class="button-with-arrow">
+          <span>Employee journeys</span> <span>></span>
+        </button>
+      </div>
+      <div class="grid-image">
+        <img src="./assets/emma.jpeg" alt="Picture of Emma" />
       </div>
     </div>
 
