--- a/src/index.html
+++ b/src/index.html
@@ -40,38 +40,65 @@
       </div>
     </div>
     <!-- Grid -->
-    <div class="grid">
-      <div class="grid-text">
+    <div class="grid-container">
+      <div class="grid grid-text">
         <h1>Join us as we save time and money for people everywhere</h1>
-        <p>sdfsdfdsfdfsdfsd</p>
+        <p>
+          Since 2006. we've been disrupting the insurance industry to save
+          millions of people masses of money. We're looking for talented,
+          ambitious and friendly faces to help us achieve our mission. We have a
+          wide range of roles across GoCo as we're constantly growing. So, if
+          you've got the skills and passion, we want to hear from you!
+        </p>
         <button class="button-with-arrow">
           <span>Who we are</span> <span>></span>
         </button>
       </div>
-      <div class="grid-image">
+      <div class="grid grid-image">
         <img
           src="./assets/picturesOfCompanies.png"
           alt="Pictures of company logos"
         />
       </div>
-      <div class="grid-image">
-        <img src="./assets/excitedPeople.jpeg" alt="People looking excited" />
-      </div>
-      <div class="grid-text">
+      <div class="grid grid-text">
         <h1>Collaborate, innovate and be proud</h1>
-        <p>whsdfdsffsd</p>
+        <p>
+          We want every member of staff to be happy, healthy and successful with
+          us. This is the case whether they're in our office or working from
+          home (which we've all been doing throughout the COVID-19 pandemic).
+          Get ready to be true to yourself, to support your teammates, to think
+          beyond the limits of what's been done before and to give things your
+          best shot. Our staff are at the heart of everything we do, so we'll
+          support you at every step of your GoCo journey.
+        </p>
         <button class="button-with-arrow">
           <span>#LifeatGoCo</span> <span>></span>
         </button>
       </div>
-      <div class="grid-text">
+      <div class="grid grid-image">
+        <img src="./assets/excitedPeople.jpeg" alt="People looking excited" />
+      </div>
+      <div class="grid grid-text">
         <h1>Grow your GoCo career</h1>
-        <p>sdfsdfdsfdsf</p>
+        <p>
+          We don't sit still, so neither should you have to. We strive to help
+          our staff further their careers, find enjoyment in what they do and
+          upskill their abilities. If you're interested in embetterment through
+          things like on-thejob degree programmes, mentorship sessions, career
+          change schemes and personal development plans, you'll love what we
+          have to offer. Follow Emma's journey to finding her place at GoCo
+        </p>
         <button class="button-with-arrow">
           <span>Employee journeys</span> <span>></span>
         </button>
       </div>
-      <div class="grid-image">
+      <div class="grid grid-image image-as-background">
+        <div>
+          <h2>Follow Emma's journey to finding her place at GoCo</h2>
+          <button class="button-with-arrow">
+            <span>Read</span><span>></span>
+          </button>
+        </div>
         <img src="./assets/emma.jpeg" alt="Picture of Emma" />
       </div>
     </div>
