add glassdoor and CEO sections

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,47 @@
         <img src="./assets/emma.jpeg" alt="Picture of Emma" />
       </div>
     </div>
+    <!-- Glassdoor and CEO -->
+    <div class="glassdoor-CEO">
+      <div class="glassdoor">
+        <img src="./assets/glassdoor_logotype.png" alt="glassdoor logo" />
+        <q>Dynamic, industry-leading environment with great benefits</q>
+        <p>Former Employee, Content Specialist in Newport, Wales</p>
+        <p>A selected review from Glassdoor, October 2020</p>
+        <button class="button-with-arrow">
+          <span>More reviews</span><span>></span>
+        </button>
+      </div>
 
+      <div class="image-as-background CEO">
+        <div class="text-container-on-CEO">
+          <q
+            >We support our people not only through their professional
+            development but also with their work-life balance, health and
+            wellbeing</q
+          >
+          <h3>Alex Currie</h3>
+          <p>Chief Police Officer</p>
+        </div>
+        <img src="./assets/CEO.jpeg" alt="Picture of Alex Currie" />
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card flex-column-container">
+        <h2>Find out what's in it for you</h2>
+        <button class="button-with-arrow">
+          <span>Find out More</span><span>></span>
+        </button>
+      </div>
+      <div class="card flex-column-container">
+        <h2>Thinking about applying for a job?</h2>
+        <button class="button-with-arrow">
+          <span>Search Jobs</span><span>></span>
+        </button>
+      </div>
+    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
