--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <title>GoCo Careers Page</title>
   </head>
   <body>
@@ -142,7 +149,36 @@
         </button>
       </div>
     </div>
-    
+
+    <!-- Footer -->
+    <footer>
+      <div class="grid-two-column sm-grid-one-column">
+        <div class="col-1 m-0">
+          <h3>We hire our talent directly. No recruitment agencies, sorry.</h3>
+
+          <p>Copyright (C) 2020 Gocompare.com Limited All Rights Reserved</p>
+          <p>
+            Gocompare.com Limited is registered in England and Wales (Company
+            No. 5799376).
+          </p>
+          <p>
+            Registered office: Imperial House, Imperial Way, Newport, Gwent,
+            NP10 8UH, United Kingdom
+          </p>
+          <p><a href="#">Modern Slavery Statement</a></p>
+          <p><a href="#">Cookie Policy Terms and Conditions</a>
+          </a></p>
+          <p><a href="#">Terms and Conditions</a>
+          </a></p>
+        </div>
+        <div class="col-2"></div>
+      </div>
+
+      <div class="grid-two-column my-m">
+        <p class="col-1">PRIVACY POLICY</p>
+        <p class="col-2 text-align-end">POWERED BY PINPOINT</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
