remove unused classes and align footer

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <span class="hamburger-line"></span>
         <span class="hamburger-line"></span>
       </a>
-      <div class="navbar-links">
+      <div class="navbar-links mx-m text-center">
         <ul class="flex nobullets gap-sm">
           <li><a href="#">Who we are</a></li>
           <li><a href="#">#LifeatGoCo</a></li>
@@ -42,9 +42,7 @@
     </nav>
     <!-- HERO -->
     <div class="hero-image flex justify-center items-center">
-      <div
-        class="hero-text flex flex-col justify-center items-center grid-sm gap-sm"
-      >
+      <div class="hero-text flex flex-col justify-center items-center gap-sm">
         <h1>Find your next job with GoCo</h1>
         <button class="button-with-arrow">
           <span>Go for it</span>
@@ -53,7 +51,7 @@
       </div>
     </div>
     <!-- MAIN CONTENT -->
-    <section
+    <div
       class="main-content mt-lg grid grid-two-cols-30-30 justify-center gap-lg sm-grid-one-col"
     >
       <div class="col-alternate grid-text">
@@ -66,7 +64,7 @@
           you've got the skills and passion, we want to hear from you!
         </p>
         <button class="button-with-arrow">
-          <span>Who we are</span> <span>></span>
+          <span>Who we are</span><span>></span>
         </button>
       </div>
       <div class="col-alternate grid-image">
@@ -87,7 +85,7 @@
           support you at every step of your GoCo journey.
         </p>
         <button class="button-with-arrow">
-          <span>#LifeatGoCo</span> <span>></span>
+          <span>#LifeatGoCo</span><span>></span>
         </button>
       </div>
       <div class="col-alternate grid-image">
@@ -104,7 +102,7 @@
           have to offer. Follow Emma's journey to finding her place at GoCo
         </p>
         <button class="button-with-arrow">
-          <span>Employee journeys</span> <span>></span>
+          <span>Employee journeys</span><span>></span>
         </button>
       </div>
       <div class="col-alternate grid-image flex items-center text-center">
@@ -123,9 +121,9 @@
         </div>
         <img src="./assets/emma.jpeg" alt="Picture of Emma" />
       </div>
-    </section>
+    </div>
     <!-- TESTIMONY -->
-    <section
+    <div
       class="testimony flex flex-col justify-center items-center gap-lg mt-lg"
     >
       <div
@@ -145,12 +143,10 @@
       </div>
 
       <div class="flex items-center">
-        <div
-          class="text-in-lg-img absolute grid grid-two-cols-7-28 sm-text-vw-s"
-        >
-          <!--Empty div-->
+        <div class="absolute grid grid-two-cols-7-28 sm-text-vw-s">
+          <!--EMPTY DIV FOR GRID SPACING-->
           <div></div>
-          <!-- End of empty div -->
+          <!-- END OF EMPTY DIV -->
           <div>
             <h3>
               <q
@@ -169,8 +165,8 @@
           alt="Picture of Alex Currie"
         />
       </div>
-    </section>
-
+    </div>
+    <!-- CARDS -->
     <div
       class="card-container flex justify-center items-center mt-lg sm-grid-one-col"
     >
@@ -191,7 +187,7 @@
     <!-- Footer -->
     <footer>
       <div
-        class="grid grid-two-cols-30-30 justify-center gap-lg sm-grid-one-col mt-lg"
+        class="grid grid-two-cols-30-30 justify-center gap-lg sm-grid-two-cols-58-2 mt-lg"
       >
         <div>
           <h4 class="mb-m">
@@ -208,10 +204,12 @@
             NP10 8UH, United Kingdom
           </p>
           <p><a href="#">Modern Slavery Statement</a></p>
-          <p><a href="#">Cookie Policy Terms and Conditions</a></p>
+          <p><a href="#">Cookie Policy</a></p>
           <p><a href="#">Terms and Conditions</a></p>
         </div>
+        <!-- EMPTY DIV FOR GRID SPACING -->
         <div></div>
+        <!-- END OF EMPTY DIV -->
       </div>
 
       <div class="grid grid-two-cols-30-30 justify-center my-m gap-lg">
@@ -233,6 +231,7 @@
         <p class="font-bold text-end">POWERED BY PINPOINT</p>
       </div>
     </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
